fix: fix correct checking/unlocking radicle identity